--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/eurekarental-09-22/">https://rank-fortress-digital-agency.github.io/eurekarental-09-22/</a><br>
+                <a target="_bLank" href="http://eurekarental-09-22.s3-website.ap-south-1.amazonaws.com">http://eurekarental-09-22.s3-website.ap-south-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://aesthetic-cocada-dd0d31.netlify.app/">https://aesthetic-cocada-dd0d31.netlify.app/</a><br>
             </section>
 
         </div>
